[project]
name = "cyberres-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "fastmcp>=2.10.6",
    "mcp[cli]>=1.10.1",
    "paramiko>=3.5.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "cyberres-mcp",
]

[tool.uv.sources]
cyberres-mcp = { workspace = true }
